# turtlebot3-robot-system-programming

./: .gitignore  .gitmodules  README.md
docs/Project_Proposal/: proposal.tex
rsp_frontier_exploration/src/: collisionDetection.cpp  frontierExplorer_node.cpp  pathPlanning.cpp
rsp_frontier_exploration_server/: CMakeLists.txt  package.xml
rsp_frontier_exploration_server/src/: front_exp_server.cpp  front_exp_server_node.cpp  wavefront_frontier_detection.cpp
rsp_loop_detection/: CMakeLists.txt  package.xml
rsp_loop_detection/launch/: rsp_loop_detection.launch
rsp_loop_detection/param/: loop_detection_params.yaml
rsp_loop_detection/src/: rsp_loop_detection_node.cpp  rsp_loop_detector.cpp  test_node.cpp
rsp_random_walk_exploration/: CMakeLists.txt  package.xml
rsp_random_walk_exploration/launch/: rsp_random_walk_exploration.launch
rsp_random_walk_exploration/param/: random_walk_params.yaml
rsp_random_walk_exploration/src/: rsp_random_walk_exploration.cpp  rsp_random_walk_exploration_node.cpp
rsp_random_walk_frontier_exploration/: CMakeLists.txt  package.xml
rsp_random_walk_frontier_exploration/src/: collisionDetection.cpp  pathPlanning.cpp  randomWalk_action.cpp  randomWalk_action_node.cpp
rsp_turtlebot3_msgs/: CMakeLists.txt  package.xml
rsp_turtlebot3_msgs/action/: RandomWalk.action
rsp_turtlebot3_msgs/srv/: add_scan_to_loop_detection_database.srv  detect_loop.srv  (+1 more)
rsp_turtlebot3_slam/: CMakeLists.txt  package.xml
rsp_wf_frontier_exploration/: CMakeLists.txt  package.xml
rtt_rsp_turtlebot3_msgs/: CMakeLists.txt  package.xml
(+30 files in other folders)
